# adev

./: .clang-format  .clang-tidy  .gitignore  ADev.doxyfile  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  STYLE_GUIDE.md  adev.doxyfile  adev.sh  build.bat  build.sh  clang-tidy.sh  code_of_conduct.md  compile_flags.txt  containerfile  coverage.sh  dockerfile  dockerfile_backup  process_win.cpp  readme.md  style_guide.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: -github-bug-report.md  -github-feature-request.md  bug-report.md  bug.md  feature-request.md  feature.md  issue-template.md  issue_template.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ADev.yml  CI.yml  Ubuntu_GCC.yml  Windows_MSVC.yml  adev,yml  adev.yml  macOS_Clang.yml  main.yml  pr.yml
dependencies/tiny-process-library/: process_unix.cpp
projects/ABenchmarks/: BitMaskBenchmark.cpp  DataIndexMapBenchmark.cpp  README.md  VariantBenchmark.cpp  pch.hpp
projects/ABuild/: File.cpp  File.hpp  README.md  Source.cpp  main.cpp
projects/ACore/: CommandLine.cpp  CommandLineOption.cpp  DataIndexMap.cpp  DataStream.cpp  DataStreamBuffer.cpp  DictionaryData.cpp  Endianness.cpp  Numeric.cpp  Process.cpp  README.md
projects/ADb/: Condition.cpp  Element.cpp  InsertEdgeFromQuery.cpp  InsertEdgeQuery.cpp  InsertQuery.cpp  KeyValue.cpp  Placeholders.cpp  Query.cpp  QueryData.cpp  Query_Insert.cpp  Query_InsertEdge.cpp  Query_InsertEdgeFrom.cpp  Query_InsertEdgeTo.cpp  Query_InsertEdgeValues.cpp  Query_InsertEdges.cpp  Query_InsertEdgesFrom.cpp  Query_InsertEdgesTo.cpp  Query_InsertEdgesToEach.cpp  Query_InsertEdgesValues.cpp  Query_InsertNodeValues.cpp  Query_InsertNodesValues.cpp  Query_InsertNodesValuesOptional.cpp  Query_Select.cpp  README.md  Result.cpp  SelectQuery.cpp  SubQuery.cpp  Value.cpp  pch.hpp
projects/ADbQuery/: ADb.json  Analyzer.js  Parser.js  README.md  common.js  index.js  package-lock.json  package.json
projects/ADbStudio/: README.md  jest.config.js  package-lock.json  package.json
projects/AFile/: File.cpp  FileData.cpp  FileRecords.cpp  FileStream.cpp  FileStreamBuffer.cpp  FileStreamBufferPrivate.cpp  FileStreamBufferPrivate.hpp  PersistentDataIndexMap.cpp  PersistentDataIndexMapData.cpp  PersistentDictionary.cpp  PersistentDictionaryData.cpp  README.md  WAL.cpp  pch.hpp
projects/AGraph/: Graph.cpp  PersistentGraph.cpp  PersistentGraphData.cpp  README.md  pch.hpp
projects/abuild/: README.md  abuild.cpp  build_cache.cpp  build_cache_index.cpp  build_graph.cpp  build_task.cpp  code_scanner.cpp  cpp_file.cpp  default_settings.cpp  dependencies.cpp  dependency.cpp  dependency_scanner.cpp  environment_scanner.cpp  error.cpp  file.cpp  header.cpp  high_level_design.md  main.cpp  module.cpp  override.cpp  project.cpp  project_scanner.cpp  projects.cpp  projects_scanner.cpp  sdk.cpp  sdk_scanner.cpp  settings.cpp  source.cpp  token.cpp  tokenizer.cpp  toolchain.cpp  toolchain_scanner.cpp  toolchain_scanner_linux.cpp  toolchain_scanner_windows.cpp  toolchains.cpp  toolchains_scanner_linux.cpp  toolchains_scanner_windows.cpp  warning.cpp
projects/abuild.cache/: abuild.cache.cpp  cache.cpp  cache_data.cpp  cache_reader.cpp  file.cpp  flag.cpp  module.cpp  settings.cpp  toolchain.cpp
projects/abuild.cpptokenizer/: if_token.cpp  preprocessor_if_tokenizer.cpp  token_operators.cpp
projects/abuild.test_utilities/: test_project.cpp  token_operators.cpp
projects/abuild_old/: abuild.cpp  dependency_scanner.cpp  file.cpp  high_level_design.md  project.cpp  project_scanner.cpp  tokenizer.cpp  toolchain_scanner.cpp
projects/acommandline/: acommandline.cpp  command_line.cpp  command_line_option.cpp  option.cpp  option_builder.cpp  option_builder_base.cpp  option_builder_defined.cpp  option_builder_described.cpp  option_builder_named.cpp  option_builder_value.cpp  option_data.cpp  option_help_line.cpp  option_matcher.cpp  option_setter.cpp  printer.cpp  readme.md
projects/acore/: README.md  acore.cpp  acore_common.cpp  commandline.cpp  commandline_option.cpp  high_level_design.md  module.modulemap  process.cpp  process_unix.cpp  process_windows.cpp
projects/aprocess/: aprocess.cpp  async_reader.cpp  environment_variable.cpp  module.modulemap  pipe.cpp  process.cpp  process_setup.cpp  readme.md  unix_process.cpp  windows_process.cpp
projects/aprocesstestapp/: main.cpp
projects/astl/: README.md  astl.cpp  astl.hpp  convertible_to.hpp  high_level_design.md  invocable.hpp  main.js  module.modulemap  package.json  readme.md  source_location.hpp
projects/atest/: README.md  atest.cpp  atest.ixx  atest_stl.hpp  data.cpp  expect.cpp  expect_base.cpp  expect_to_match.cpp  expect_to_throw.cpp  expect_tomatch.cpp  expect_tothrow.cpp  failed_assertion.cpp  failure.cpp  filters.cpp  global_tests.cpp  high_level_design.md  matcher.cpp  matcher_base.cpp  matcher_contains.cpp  printer.cpp  readme.md  report.cpp  reporter.cpp  results.cpp  selected_tests.cpp  source_location.cpp  stats.cpp  stringify.cpp  test.cpp  test_context.cpp  test_filter.cpp  test_runner.cpp  test_suite.cpp
projects/athreadpool/: athreadpool.cpp  job.cpp  jobs.cpp  monitor.cpp  queue.cpp  readme.md  threadpool.cpp
projects/awinapi/: awinapi.cpp  buffer.cpp  handle.cpp  last_error_message.cpp  module.modulemap  pipe.cpp  readme.md  windows.hpp
projects/rapidjson/: README.md
projects/tiny-process-library/: CMakeLists.txt  process.hpp  process_unix.cpp
projects/yamlcpp/: module.modulemap  readme.md  yamlcpp.cpp  yamlcpp.hpp
sh/: analyse.sh  analyse_checks.sh  build.sh  build_acommandline.sh  build_acommandline_test.sh  build_astl.sh  build_atest.sh  build_atest_test.sh  build_common.sh  build_docs.sh  build_libc++.sh  build_libc++_msan.sh  clang-tidy.sh  clang_tidy.sh  common.sh  common_build.sh  coverage.sh  coverage_thresholds.sh  docker.sh  docs.sh  format.sh  help.sh  install.sh  install_clang-format.sh  install_clang-tidy.sh  install_clang.sh  install_doxygen.sh  install_gcc.sh  test.sh
sh/install/: clang-format.sh  cmake.sh  gcc.sh  (+2 more)
(+504 files in other folders)
